# rasa-webchat-fastapi

./: .gitignore  README.md  docker-compose.yml
apis/weather_api/: Dockerfile  pyproject.toml
apis/weather_api/src/: __init__.py
apis/weather_api/src/controllers/: __init__.py  weather_controller.py
apis/weather_api/src/routes/: weather_routes.py
apis/weather_api/src/services/: __init__.py  weather_service.py
apis/weather_api/src/utils/: __init__.py  constants.py  logger.py  openweather.py  validators.py
client/: index.html
rasa-webchat/: Dockerfile  config.yml  credentials.yml  domain.yml  endpoints.yml
rasa-webchat/actions/: greet_actions.py  weather_action.py
rasa-webchat/data/: lookup.yml  nlu.yml  rules.yml  stories.yml
rasa-webchat/tests/: test_stories.yml
